--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 50px;
     background-color: rgb(27, 27, 46);
     color: rgb(252, 252, 252);
-    text-align: center;
+    text-align: left;
 }
 body {
     background-color: rgb(216, 194, 94);
